<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="product"
            type="com.example.rakuten_test_technique.data.list_products_entity.Product" />

        <variable
            name="clickListener"
            type="com.example.rakuten_test_technique.presentation.products_list.ProductClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:onClick="@{() -> clickListener.onClick(product)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/product_image"
                app:imageFromUrl="@{product.imagesUrls.get(0)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="140dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/space_large" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:text="@{product.headline}"
                android:textAppearance="@style/TextAppearance.Headline"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/tools_text_headline" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="@{product.reviewsAverageNote}"
                android:stepSize="0.25"
                android:theme="@style/RatingBarStyle"
                app:layout_constraintStart_toEndOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/headline" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:text="@{@string/reviews_format(product.nbReviews)}"
                android:textSize="@dimen/size_normal"
                app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@+id/rating_bar"
                app:layout_constraintTop_toTopOf="@id/rating_bar"
                tools:text="@string/tools_text_reviews" />

            <TextView
                android:id="@+id/salle_crosed_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{product.buybox.saleCrossedPrice== 0 ? View.GONE : View.VISIBLE}"
                app:htmlViewer="@{@string/old_price_format(product.buybox.saleCrossedPrice)}"
                app:layout_constraintBottom_toBottomOf="@id/salle_percent_discount"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="@id/salle_percent_discount"
                tools:text="@string/tools_text_price" />

            <TextView
                android:id="@+id/salle_percent_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginTop="@dimen/space_normal"
                android:background="@drawable/shape_radius"
                android:text="@{@string/percent_format(product.buybox.salePercentDiscount)}"
                android:textColor="@color/secondaryTextColor"
                android:visibility="@{product.buybox.salePercentDiscount== 0 ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toTopOf="@id/salle_price"
                app:layout_constraintStart_toEndOf="@+id/salle_crosed_price"
                app:layout_constraintTop_toBottomOf="@id/rating_bar"
                tools:text="@string/tools_text_salle_percent_discount" />

            <TextView
                android:id="@+id/salle_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isNewPrice="@{product.isNew}"
                app:layout_constraintBottom_toTopOf="@id/advert_quality"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:price="@{product.buybox.salePrice}"
                tools:text="@string/tools_text_price" />

            <TextView
                android:id="@+id/advert_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{product.advType}"
                android:textColor="@{product.isNew ? @color/primaryColor : @color/primaryTextColor}"
                app:layout_constraintBottom_toBottomOf="@+id/salle_price"
                app:layout_constraintStart_toEndOf="@id/salle_price"
                tools:text="@string/tools_text_advert_type" />

            <TextView
                android:id="@+id/advert_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                app:isNewQuality="@{product.isNew}"
                app:layout_constraintBottom_toTopOf="@id/best_price"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:quality="@{product.advQuality}"
                tools:text="@string/tools_text_advert_quality" />


            <TextView
                android:id="@+id/best_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:newOrUsedBestPrice="@{product}"
                tools:text="@string/tools_text_best_price" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>