<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.rakuten_test_technique.presentation.product_detail.ProductDetailViewModel" />
    </data>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
<!--        android:visibility="@{viewModel.state ? View.VISIBLE : View.GONE}">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<!--            <ProgressBar-->
<!--                android:id="@+id/progress_bar"-->
<!--                style="?android:attr/progressBarStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:visibility="@{viewModel.state ? View.VISIBLE : View.GONE}"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

            <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.state ? View.GONE : View.VISIBLE}"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="@dimen/space_large" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="@dimen/space_large" />

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/product_imgs"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:paddingTop="@dimen/space_large"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toTopOf="parent"
                        app:updateImages="@{viewModel.productDetail}" />

                    <LinearLayout
                        android:id="@+id/dots_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_large"
                        android:orientation="horizontal"
                        android:showDividers="middle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_imgs" />

                    <View
                        android:id="@+id/separator1"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginTop="@dimen/space_large"
                        android:background="@color/greyLight"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/dots_container" />

                    <TextView
                        android:id="@+id/headline"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_large"
                        android:text="@{viewModel.productDetail.headline}"
                        android:textAppearance="@style/TextAppearance.Headline"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/separator1"
                        tools:text="@string/tools_text_headline" />

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="@{viewModel.productDetail.globalRating.score}"
                        android:stepSize="0.25"
                        android:theme="@style/RatingBarStyle"
                        app:layout_constraintStart_toEndOf="@+id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@+id/headline" />

                    <TextView
                        android:id="@+id/nb_reviews"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:text="@{@string/reviews_format(viewModel.productDetail.globalRating.nbReviews)}"
                        android:textSize="@dimen/size_normal"
                        app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@id/rating_bar"
                        app:layout_constraintTop_toTopOf="@id/rating_bar"
                        tools:text="@string/tools_text_reviews" />

                    <TextView
                        android:id="@+id/sale_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_large"
                        app:isNewPrice="@{viewModel.productDetail.isNew}"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/nb_reviews"
                        app:price="@{viewModel.productDetail.salePrice}"
                        tools:text="@string/tools_text_price" />

                    <TextView
                        android:id="@+id/seller_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_large"
                        android:layout_marginEnd="@dimen/space_small"
                        android:textColor="@color/primaryTextColor"
                        app:htmlViewer="@{@string/seller_name_format(viewModel.productDetail.seller.login)}"
                        app:layout_constraintBottom_toBottomOf="@id/sale_price"
                        app:layout_constraintEnd_toStartOf="@id/pro"
                        tools:text="@string/tools_text_seller_name" />

                    <TextView
                        android:id="@+id/pro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_large"
                        android:background="@drawable/shape_contour"
                        android:text="@string/pro"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/size_small"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/sale_price"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end" />

                    <TextView
                        android:id="@+id/advert_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.productDetail.advType}"
                        android:textColor="@{viewModel.productDetail.isNew ? @color/primaryColor : @color/primaryTextColor}"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/sale_price"
                        tools:text="@string/tools_text_advert_type" />

                    <TextView
                        android:id="@+id/advert_quality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_small"
                        android:text="@{viewModel.productDetail.advType}"
                        android:textColor="@{viewModel.productDetail.isNew ? @color/primaryColor : @color/primaryTextColor}"
                        app:isNewQuality="@{viewModel.productDetail.isNew}"
                        app:layout_constraintBottom_toBottomOf="@id/advert_type"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@id/advert_type"
                        app:layout_constraintTop_toTopOf="@id/advert_type"
                        app:quality="@{viewModel.productDetail.advQuality}"
                        tools:text="@string/tools_text_advert_quality" />

                    <View
                        android:id="@+id/separator2"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginTop="@dimen/space_large"
                        android:background="@color/greyLight"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/advert_type" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_large"
                        app:htmlViewer="@{viewModel.productDetail.description}"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/separator2"
                        tools:text="@string/tools_text_description" />

                    <View
                        android:id="@+id/separator3"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginTop="@dimen/space_large"
                        android:background="@color/greyLight"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/description" />

                    <TextView
                        android:id="@+id/seller_comment"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_large"
                        android:text="@{viewModel.productDetail.sellerComment}"
                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@id/separator3"
                        tools:text="@string/tools_text_seller_comment" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>
</layout>